# Coursera

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  Team_Meeting_Attendance_Log.txt  pyproject.toml  selenium_login.py
